--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,5 +1,12 @@
 ---
+import Link from "../components/Link.astro";
 ---
+
 <div>
-Header - tilføj navigation mm.
+  <nav class="flex justify-end p-5">
+    <ul class="flex gap-5">
+      <Link href="#tanken_bag">Tanken bag</Link>
+      <Link href="#anvendelse">Anvendelse</Link>
+    </ul>
+  </nav>
 </div>
