--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,6 +1,11 @@
 ---
+import { Image } from "astro:assets";
+import calming from "../assets/images/calming.svg";
 ---
-<div>
-<p>Footer - tilføj footerindhold</p>
+
+<div class="flex justify-end p-5">
+  <div class="relative">
+    <Image src={calming} alt="" width="200" />
+    <p class="absolute -left-32 top-12">Skrifttype af Line Kofod Thomsen</p>
+  </div>
 </div>
-  
