--- a/src/components/Link.astro
+++ b/src/components/Link.astro
@@ -1,5 +1,8 @@
 ---
 // Henter parametrene fra Astro.props
-const { href="#", target="_self"} = Astro.props; 
+const { href = "#", target = "_self" } = Astro.props;
 ---
-<a href={href} class="underline" target={target}><slot /></a>
+
+<a href={href} class="text-[24px] hover:text-[#6D6D6D]" target={target}
+  ><slot /></a
+>
