--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,7 +8,7 @@ import calming_rose from "../assets/images/calming_rose.svg";
 import calming_blue from "../assets/images/calming_blue.svg";
 import calming_green from "../assets/images/calming_green.svg";
 import calming_beige from "../assets/images/calming_beige.svg";
-import moodboard from "../assets/images/moodboard.png";
+import moodboard from "../assets/images/moodboard.webp";
 ---
 
 <MainLayout title="Titel">
