--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,11 +13,11 @@ import moodboard from "../assets/images/moodboard.webp";
 
 <MainLayout title="Titel">
   <section class="max-w-max mx-auto h-96 flex justify-center">
-    <Image src={calming} alt="" width="600" />
+    <Image src={calming} alt="" width="600" class="calming" />
   </section>
   <section class="grid grid-cols-[600px_1fr] gap-3 m-12" id="tanken_bag">
     <div class="flex flex-col gap-2">
-      <h1>Tanken bag calming</h1>
+      <h2>Tanken bag calming</h2>
       <div class="flex flex-col gap-2">
         <p>
           Skrifttypen er inspireret af det feminine, enkle, flydende og elegante
@@ -38,13 +38,13 @@ import moodboard from "../assets/images/moodboard.webp";
 
   <section class="m-12 flex flex-col gap-10 mt-32" id="anvendelse">
     <div class="flex flex-col gap-2">
-      <h1>Inspiration til anvendelse</h1>
+      <h2>Inspiration til anvendelse</h2>
       <p>
         Eksempler på forskellige farvekombinationer, som matcher æstetikken af
         skrifttypen.
       </p>
     </div>
-    <div class="flex flex-col gap-4">
+    <div class="flex flex-col gap-4 fadein">
       <div class="flex flex-row gap-4">
         <div class="bg-[#CCA894] w-fit p-6">
           <Image src={calming_white} alt="" width="300" />
@@ -96,7 +96,7 @@ import moodboard from "../assets/images/moodboard.webp";
     <p>
       Bogstaverne kan også benyttes i forbindelse med et logo eller et symbol.
     </p>
-    <div class="flex flex-row gap-4">
+    <div class="flex flex-row gap-4 fadein2">
       <div class="p-8 bg-[#ADB0A5] w-fit">
         <svg
           xmlns="http://www.w3.org/2000/svg"
@@ -280,3 +280,29 @@ import moodboard from "../assets/images/moodboard.webp";
     </div>
   </section>
 </MainLayout>
+
+<script>
+  import { scroll, animate, inView, timeline, stagger } from "motion";
+
+  // Entrance animation
+  animate(
+    ".calming",
+    {
+      clipPath: ["inset(0 100% 0 0)", "inset(0 0% 0 0)"],
+    },
+    { duration: 3 }
+  );
+
+  //   InView animation
+  const fadein = document.querySelector(".fadein");
+
+  inView(fadein, () => {
+    fadein.classList.add("animate__animated", "animate__fadeIn");
+  });
+
+  const fadein2 = document.querySelector(".fadein2");
+
+  inView(fadein2, () => {
+    fadein2.classList.add("animate__animated", "animate__fadeIn");
+  });
+</script>
